syntax = "proto3";

option java_outer_classname = "MediaPlayerProto";

package pandora;

import "google/protobuf/empty.proto";


service MediaPlayer {
  rpc Play(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Pause(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Rewind(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc FastForward(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Forward(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Backward(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc SetLargeMetadata(google.protobuf.Empty) returns (google.protobuf.Empty);
}